Adds links model/spec/controller/views and linksubs model

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Log Up</h1>
+
+<form action="<%= users_url %>" method="POST">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <label for="username">Username</label>
+  <input id="username" type="text" name="user[username]">
+
+  <label for="password">Password</label>
+  <input type="password" id="password" name="user[password]">
+
+  <input type="submit" value="Log Up">
+</form>
