--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,19 @@
 <html>
 <head>
   <title>RedditClone</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <% stylesheet_link_tag    "application", :media => "all" %>
+  <% javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= flash[:errors] %>
 
-<%= yield %>
+  <% if logged_in? %>
+  <%= current_user.username %>
+    <%= button_to("Log Out", session_url, :method => :delete) %>
+  <% end %>
+
+  <%= yield %>
 
 </body>
 </html>
